2021-12-22 Se agregan reportes por turnos a bitácoras de producción

--- a/CódigoFuente/BitacorasProduccion/Views/Error/NotFound.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Error/NotFound.cshtml
@@ -14,7 +14,7 @@
                     <div class="col-md-12 ">
                         <div class="error-text">
                             <h1 class="error">404 Error </h1>
-                            <h4>¡Lo sentimos! ¡La p&aacute;gina o recurso no pudo ser encontrado!</h4>
+                            <h4>¡Lo sentimos! ¡La p&aacute;gina o el recurso no pudo ser encontrado!</h4>
                             <p>Lo sentimos, pero la p&aacute;gina o el recurso que solicit&oacute; no existe, ha sido eliminado o cambio de nombre.</p>
 
                             <a href="@Url.Action( "Index", "Home")" class="btn btn-primary btn-round">Volver al inicio</a>
