--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Editar Poliza Manual";
+    ViewBag.Title = "Editar Póliza Manual";
     ViewBag.PrimerNivel = "polizas_manuales";
     ViewBag.SegundoNivel = "PM_registro";
     ViewBag.ControllerName = "PolizaManual";
