--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
@@ -110,25 +110,32 @@
                                                     <tr>
 
                                                         <td>
+                                                            @if (ViewBag.Validar != null && ViewBag.Validar)
+                                                            {
+                                                                <a href="@Url.Action("ValidarArea", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success " title="Validar">
+                                                                    <i class="fa fa-check-circle-o"></i>
+                                                                </a>
+                                                            }
                                                             @if (ViewBag.Edit != null && ViewBag.Edit)
                                                             {
-                                                                <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                                <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " title="Editar">
                                                                     <i class="fa fa-pencil-square-o"></i>
                                                                 </a>
                                                             }
                                                             @if (ViewBag.Details != null && ViewBag.Details)
                                                             {
-                                                                <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
+                                                                <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
                                                                     <i class="fa fa-info-circle"></i>
                                                                 </a>
                                                             }
                                                             @if (ViewBag.EnviarValidacion != null && ViewBag.EnviarValidacion)
                                                             {
-                                                                <a href="@Url.Action("Send", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info btm-sm" title="Enviar">
+                                                                <a href="@Url.Action("EnviarParaValidacion", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info " title="Enviar">
                                                                     <i class="fa fa-send"></i>
                                                                 </a>
                                                             }
-                                                          
+
+
                                                         </td>
                                                         <td style="text-align:center">
                                                             @Html.DisplayFor(modelItem => item.id)
