--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
@@ -9,6 +9,8 @@
     Portal_2_0.Models.mm_v3 mm = (Portal_2_0.Models.mm_v3)ViewBag.MM;
     Portal_2_0.Models.class_v3 class_ = (Portal_2_0.Models.class_v3)ViewBag.Class;
     int contador = 100;
+
+    int numeracionLotes = 1;
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 }
 
@@ -251,33 +253,38 @@
                             <div id="div_lotes">
                                 @foreach (Portal_2_0.Models.produccion_lotes lote in Model.produccion_lotes)
                                 {
-                                    <div class="form-group row" id="div_lotes_@contador">
-                                        <input type="hidden" name="produccion_lotes.Index" id="produccion_lotes.Index" value="@contador" />
-                                        <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_izquierdo">
-                                            <span class="float-right">Lote Izquierdo</span>
-                                        </label>
-                                        <div class="col-md-2">
-                                            <input style="text-align:right" type="number" min="0" step="1" max="50000" name="produccion_lotes[@contador].numero_lote_izquierdo" id="produccion_lotes[@contador].lote_izquierdo" class="form-control col-md-12" value="@lote.numero_lote_izquierdo" autocomplete="off" readonly>
-                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_izquierdo" data-valmsg-replace="true"></span>
-                                        </div>
-                                        <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_derecho">
-                                            <span class="float-right">Lote Derecho</span>
-                                        </label>
-                                        <div class="col-md-2">
-                                            <input type="number" min="0" step="1" max="50000" name="produccion_lotes[@contador].numero_lote_derecho" id="produccion_lotes[@contador].lote_derecho" class="form-control col-md-12" value="@lote.numero_lote_derecho" autocomplete="off" readonly>
-                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_derecho" data-valmsg-replace="true"></span>
-                                        </div>
-                                        <label class="control-label col-md-2" for="produccion_lotes[@contador].piezas_paquete">
-                                            <span class="float-right">Piezas por paquete</span>
-                                        </label>
-                                        <div class="col-md-2">
-                                            <input type="number" min="0" step="1" max="5000" name="produccion_lotes[@contador].piezas_paquete" id="produccion_lotes[@contador].piezas_paquete" class="form-control col-md-12 total_piezas" value="@lote.piezas_paquete" maxlength="10" readonly>
-                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].piezas_paquete" data-valmsg-replace="true"></span>
-                                        </div>
-                                        @*<div class="col-md-1">
-                            <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarLote(@contador); return false;">
-                        </div>*@
+                                <div class="form-group row" id="div_lotes_@contador">
+                                    <input type="hidden" name="produccion_lotes.Index" id="produccion_lotes.Index" value="@contador" />
+
+                                    <div class="col-md-1">
+                                        <input style="text-align:center; background-color:antiquewhite" type="text" class="form-control col-md-12 input-contador-lotes" value="@numeracionLotes++" readonly="readonly">
                                     </div>
+
+                                    <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_izquierdo">
+                                        <span class="float-right">Lote Izquierdo</span>
+                                    </label>
+                                    <div class="col-md-2">
+                                        <input style="text-align:right" type="number" min="0" step="1" max="50000" name="produccion_lotes[@contador].numero_lote_izquierdo" id="produccion_lotes[@contador].lote_izquierdo" class="form-control col-md-12" value="@lote.numero_lote_izquierdo" autocomplete="off" readonly>
+                                        <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_izquierdo" data-valmsg-replace="true"></span>
+                                    </div>
+                                    <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_derecho">
+                                        <span class="float-right">Lote Derecho</span>
+                                    </label>
+                                    <div class="col-md-2">
+                                        <input type="number" min="0" step="1" max="50000" name="produccion_lotes[@contador].numero_lote_derecho" id="produccion_lotes[@contador].lote_derecho" class="form-control col-md-12" value="@lote.numero_lote_derecho" autocomplete="off" readonly>
+                                        <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_derecho" data-valmsg-replace="true"></span>
+                                    </div>
+                                    <label class="control-label col-md-2" for="produccion_lotes[@contador].piezas_paquete">
+                                        <span class="float-right">Piezas por paquete</span>
+                                    </label>
+                                    <div class="col-md-2">
+                                        <input type="number" min="0" step="1" max="5000" name="produccion_lotes[@contador].piezas_paquete" id="produccion_lotes[@contador].piezas_paquete" class="form-control col-md-12 total_piezas" value="@lote.piezas_paquete" maxlength="10" readonly>
+                                        <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].piezas_paquete" data-valmsg-replace="true"></span>
+                                    </div>
+                                    @*<div class="col-md-1">
+            <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarLote(@contador); return false;">
+        </div>*@
+                                </div>
 
                                     contador++;
                                 }
@@ -353,7 +360,7 @@
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
-                                <span style="color:black"><b>PESO REAL PIEZA NETO</b></span>
+                                <span style="color:black"><b>PESO REAL PIEZAS</b></span>
                             </div>
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.produccion_datos_entrada.peso_real_pieza_neto, new { @class = "control-label col-md-1" })
@@ -361,21 +368,14 @@
                                     @Html.EditorFor(model => model.produccion_datos_entrada.peso_real_pieza_neto, new { htmlAttributes = new { @class = "form-control col-md-12", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.produccion_datos_entrada.peso_real_pieza_neto, "", new { @class = "text-danger" })
                                 </div>
-                                @*<div class="col-md-2">
-                    @if (!String.IsNullOrEmpty(Model.produccion_lineas.ip))
-                    {
-                        <input type="button" value="Obtener Peso Báscula" class="btn btn-round btn-info float-left" onclick="muestraModalSocket(); return false;">
-                    }
-                    else
-                    {
-                        <input type="button" value="Obtener Peso Báscula" class="btn btn-round btn-info float-left" onclick="muestraModalSocket(); return false;" disabled>
-                    }
-
-
-                </div>
-                <div class="col-md-7">
-                    <input id="modal_button" type="button" value="Captura Manual" class="btn btn-round btn-warning float-right" onclick="mostrarModal(); return false;">
-                </div>*@
+                                <!-- Peso Real Pieza Bruto -->
+                                <label class="control-label col-md-2" for="peso_bruto_kgs">
+                                    Peso Real Pieza Bruto
+                                </label>
+                                <div class="col-md-2">
+                                    <input type="text" id="peso_real_pieza_bruto_input" class="form-control col-md-12" value="" readonly>
+                                </div>
+                      
                             </div>
 
                             <div class="ln_solid"></div>
